--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -79,12 +79,12 @@
       span {
         width: 74px;
         height: 17px;
-        font-size: 14px;
+        font-size: 12px;
         color: $c_timestamp;
       }
       &--logo {
           vertical-align: middle;
-          max-height: 22px;
+          max-height: 17px;
           margin-top: 0.15em;
           padding-left: 0.25em;
       }
@@ -372,15 +372,15 @@
         box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.16), 0 4px 10px 0 rgba(0, 0, 0, 0.26);
         z-index: 1000;
 
-        $difference: 6px;
+        $difference: -7px;
 
         svg {
             z-index: 1001;
             position: relative;
-            top: -2px;
+            top: 3px;
             width:$floatingHeight + $difference;
             height: $floatingHeight + $difference;
-            left: -#{$difference - 1px};
+            left: -1px;
             background-size: 80px;
         }
 
@@ -398,7 +398,23 @@
         margin-bottom: 5px;
         overflow: hidden;
         position: relative;
+        display:flex;
+        flex-direction: row;
         /*transition: max-height 2s ease-in-out;*/
+        
+    }
+    
+    .wc-message-avatar{
+        width: 34px;
+        height: 34px;
+        min-width: 34px;
+        border-radius: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #f6f7f8;
+        vertical-align: middle;
+        margin-top: 2px;
     }
 
     @keyframes animationFrames{
@@ -729,6 +745,7 @@
     }
 
 /* Joe's solution to find FROM ME at a higher level */
+    /*
     .from-me + .from-bot::before {
       content: "Gideon";
       color: $c05;
@@ -742,7 +759,7 @@
       letter-spacing: 0.03em;
       font-size: 12px;
     }
-
+    */
 /* from me */
 
     .wc-message-from-me {
@@ -1005,7 +1022,7 @@
 
     .format-markdown>p {
         margin-bottom: 0px;
-        line-height: 1em;
+        line-height: 1.2em;
         color: inherit;
         font-size: inherit;
     }
