--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -285,7 +285,7 @@
 
 /* views */
 
-    $rightWeight:20px;
+    $rightWeight:3px;
     $floatingBottom:34px;
     $floatingHeight:55px;
     $bottom:$floatingBottom + $floatingHeight + 20px;
@@ -405,6 +405,19 @@
       display:flex;
       flex-direction: row;
     }
+
+    .wc-message-bot-name {
+      color: $c05;
+      float: left;
+      margin-left: 33px;
+      margin-bottom: 4px;
+      font-weight: normal;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: 0.03em;
+      font-size: 12px;
+    }
     
     .wc-message-avatar{
         width: 25px;
@@ -415,7 +428,6 @@
         align-items: center;
         justify-content: center;
         color: #f6f7f8;
-        opacity: 75%;
         margin-top:auto;
         margin-bottom: 10px;
     }
