--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -3,4 +3,20 @@
 @import "includes/multiple-upload";
 
 $gideon-logo-yellow: #eed77a;
-
+$gideon-dark-blue: #31ace2;
+$gideon-light-blue: #6cc1e9;
+$gideon-sky-blue: #158bff;
+$gideon-gray: #979999;
+$gideon-pale-grey: #eff0f1;
+$gideon-light-grey:#F3F4F5;
+$gideon-brown-grey: #9b9b9b;
+$gideon-dark-grey: #666666;
+$gideon-blueish-grey:#cedbda;
+$gideon-silver: #b7bdc4;
+$gideon-silver-three: #cedcdb;
+$gideon-silver-two: #c3ccd0;
+$gideon-purplish-gray: #6d6b6d;
+$gideon-grey-two:#f6f7f8;
+$gideon-semidark-grey: #979797;
+$gideon-silver-two: #c3ccd0;
+$gideon-light-border-color: #e6eaee;
