--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -105,6 +105,8 @@
         z-index: 1;
         box-shadow: 0 4px 16px 0 rgba(156, 112, 0, 0.12);
         max-width: $chatWidth;
+        display: flex;
+        line-height: 1.2em;
 
         $logo-size: 42px;
 
@@ -113,8 +115,9 @@
         }
 
         .wc-header--attourney-logo-container {
-          width: 38px;
-          height: 38px;
+          width: $logo-size;
+          min-width: $logo-size;
+          height: $logo-size;
           display: inline-block;
           vertical-align: middle;
         }
@@ -122,7 +125,10 @@
         span {
             font-size: 18px;
             vertical-align: middle;
-            margin-left: 12px;
+            margin-left: 18px;
+            margin-right: 18px;
+            display: inline-flex;
+            align-items: center;
         }
 
         &--logo {
@@ -140,6 +146,8 @@
             height: 16px;
             float: right;
             margin-top: $topMargin + 2;
+            margin-right: 0px;
+            margin-left: auto;
             padding-right: 0px;
             cursor: pointer;
         }
