--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -171,6 +171,12 @@ $width: 280px;
       margin-right: auto;
       margin-left: auto;
       outline: 0;
+      border-radius: 4px;
+    }
+
+    .gd-date-picker-next:hover:enabled, .gd-date-picker-prev:hover:enabled {
+      color: white;
+      background-color: $gd_dark_sky_blue;
     }
 
     .gd-date-picker-next {
@@ -187,18 +193,26 @@ $width: 280px;
     }
 
     .gd-date-picker-hours-back {
-      font-size: 20px;
-      font-weight: bold;
       outline: 0;
-      color: $gd_dark_sky_blue;
       background-color: white;
       border-style: none;
-      height: 20px;
-      width: 20px;
+      height: 24px;
+      width: 24px;
+      margin-top: -2px;
       margin-left: 10px;
-      text-align: center;
-      vertical-align: middle;
-      padding: 0px;
+
+      svg {
+        fill: $gd_dark_sky_blue;
+        height: 24px;
+        width: 24px;
+        border-radius: 4px;
+      }
+
+      svg:hover {
+        fill: white;
+        background-color: $gd_dark_sky_blue;
+        cursor: pointer;
+      }
     }
 
     .gd-date-picker-inner-header-selected-day {
