Added styling for markdown

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3,6 +3,7 @@
 @import "includes/card-size";
 @import "includes/media-queries";
 @import "gideon";
+@import "github-markdown.scss";
 
 /* reset */
 
