Display a restart message for a user when they come back to a conversation

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -206,6 +206,14 @@
         overflow: hidden;
     }
 
+    .restart-message {
+        padding: 15px;
+        color: $gideon-silver;
+        text-align: center;
+        font-size: 14px;
+        font-style: italic;
+    }
+
     .wc-suggested-actions {
         background-color: #ffffff;
         bottom: $consoleHeight;
