Add loading state and loading indicator to the conversations list

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -539,6 +539,17 @@
         margin-top: 62px;
         width: 100%;
 
+        .spinner-container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+
+            .spinner {
+                height: 50px;
+                margin-top: 55px;
+            }
+        }
+
         .conversations-header {
             font-size: 16px;
             color: $gideon-dark-grey;
