--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -358,6 +358,7 @@
             background-color: white;
             bottom: $consoleHeight;
             top: $headerTotalHeight;
+            width: 100%;
             display:flex;
             flex-direction: column;
             position:absolute;
