adjsut the size of the header var in the scss

--- a/src/scss/includes/settings.scss
+++ b/src/scss/includes/settings.scss
@@ -1,17 +1,17 @@
 $actionsHeight: 58px;
 $consoleHeight: 95px;
-$messageBorderRadius:14px;
+$messageBorderRadius: 14px;
 
-$fontFamily: 'Segoe UI', sans-serif;
+$fontFamily: "Segoe UI", sans-serif;
 $fontSize: 15px;
 
 $headerPaddingBottom: 10px;
 $headerPaddingLeft: 20px;
 $headerPaddingRight: 20px;
 $headerPaddingTop: 10px;
-$headerTotalHeight: 58px;
+$headerTotalHeight: 74px;
 
-$actionTransition: .2s cubic-bezier(0,0,.5,1);
+$actionTransition: 0.2s cubic-bezier(0, 0, 0.5, 1);
 
 $message_font_size: 14px;
 
