Fix header back button height and revert increase in heeader height.

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -120,6 +120,7 @@
             margin-right: 20px;
             position: relative;
             outline: none;
+            max-height: 25px;
 
             svg {
                 position: absolute;
