--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -786,7 +786,7 @@
               height: 2em;
               padding-left: 8px;
             }
-    
+
             .autocomplete-dropdown-container {
               border-style: solid;
               border-color: $gideon-dark-blue;
@@ -799,7 +799,7 @@
                 color: black;
                 padding-left: 4px;
                 padding-right: 4px;
-    
+
                 &--active {
                   padding-left: 4px;
                   padding-right: 4px;
@@ -1203,6 +1203,28 @@
 
     .wc-message-handoff {
       margin-left: auto;
+    }
+
+    .wc-message-content.wc-message-content-restart {
+        width: 260px;
+        margin-left: 25px;
+
+        .actions {
+            margin-top: 10px;
+            display: flex;
+            justify-content: space-between;
+
+            button {
+                font-size: 11px;
+                width: 48%;
+                padding: 10px;
+                border: 1px solid #31ace2;
+                background-color: $c_messageFromThem;
+                border-radius: 5px;
+                color: #31ace2;
+                font-weight: 600;
+            }
+        }
     }
 
 /* console */
