--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -811,6 +811,35 @@
             }
           }
 
+          &__components {
+            display: flex;
+            flex-direction: column;
+
+            span {
+              margin: 0;
+              padding-top: 4px;
+              padding-bottom: 4px;
+              color: $gideon-dark-blue;
+            }
+
+            input {
+              outline-style: none;
+              border-radius: 4px;
+              border-width: 1px;
+              border-color: $gideon-dark-blue;
+              border-style: solid;
+              color: black;
+              width: 100%;
+              height: 2em;
+              padding-left: 8px;
+            }
+
+            input:read-only {
+              color: $gideon-gray;
+              border-color: $gideon-dark-grey;
+            }
+          }
+
           &__submit {
             width: 100%;
             margin-top: 10px;
