Remove past fixes that were patches and set all messages to 16px size

--- a/src/scss/github-markdown.scss
+++ b/src/scss/github-markdown.scss
@@ -65,6 +65,10 @@
   word-wrap: break-word;
 }
 
+.wc-message-from-me .markdown-body {
+  color: white;
+}
+
 .markdown-body details {
   display: block;
 }
